# rust-web-framework

./: .env  Makefile  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/2024-12-01-095337_create_admin_users/: down.sql  up.sql
backend/migrations/2024-12-06-161925_create_t_admin_user_emails/: down.sql  up.sql
backend/migrations/2024-12-06-162428_create_t_admin_user_passwords/: down.sql  up.sql
backend/migrations/2024-12-06-162719_create_t_admin_user_login_history/: down.sql  up.sql
backend/migrations/2024-12-06-163032_create_t_admin_user_oauth_tokens/: down.sql  up.sql
backend/src/: lib.rs  main.rs  routes.rs  schema.rs
backend/src/controllers/: auth_controller.rs
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  router.tsx
frontend/src/components/Admin/AdminHeader/: index.tsx
frontend/src/components/Admin/AdminSidebar/: AdminSidebarItem.tsx  AdminSidebarSection.tsx  index.tsx
frontend/src/contexts/: AdminTitleContext.tsx
frontend/src/layouts/: AdminAuthLayout.tsx  AdminLayout.tsx  PublicLayout.tsx
frontend/src/pages/admin/: AdminHome.tsx  AdminUserList.tsx
frontend/src/pages/admin/auth/: AdminLogin.tsx
frontend/src/pages/public/: Home.tsx
