[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
bcrypt = "0.16.0"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.5", features = ["mysql", "r2d2", "chrono"] }
dotenvy = "0.15.7"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "mysql"] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
