[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.5", features = ["mysql", "r2d2", "chrono"] }
dotenvy = "0.15.7"
r2d2 = "0.8.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
